<resources>
    <string name="app_name">Company Meeting Scheduler</string>

    <string name="main_activity_left_nav">PREV</string>
    <string name="main_activity_right_nav">NEXT</string>

    <string name="schedule_meeting_activity_left_nav">BACK</string>
    <string name="schedule_meeting_activity_heading">Schedule a meeting</string>
    <string name="no_meetings_text">No meetings scheduled yet.</string>

    <string name="err_empty">Field required</string>
    <string name="err_start_after_end">Error: Start time equal to or after end</string>
    <string name="err_end_before_start">Error: EndTime equal to or before start</string>
    <string name="schedule_button_text">Schedule Company Meeting</string>
    <string name="meeting_date_hint">Meeting Date</string>
    <string name="start_time_hint">Start Time</string>
    <string name="end_time_hint">End Time</string>
    <string name="submit_button_text">SUBMIT</string>
    <string name="description_hint">Description</string>
</resources>
