<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.labs.jharkhandi.companymeetingscheduler.activity.ScheduleMeetingActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/meeting_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:errorTextAppearance="@style/ErrorText"
        android:layout_below="@id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:layout_marginTop="@dimen/screen_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/meeting_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_textfield_background"
            android:hint="@string/meeting_date_hint"
            android:maxLines="1"
            android:focusable="false"
            android:longClickable="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/start_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:errorTextAppearance="@style/ErrorText"
        android:layout_below="@id/meeting_date_layout"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_textfield_background"
            android:hint="@string/start_time_hint"
            android:focusable="false"
            android:longClickable="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/end_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:errorTextAppearance="@style/ErrorText"
        android:layout_below="@id/start_time_layout"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_textfield_background"
            android:hint="@string/end_time_hint"
            android:focusable="false"
            android:longClickable="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:hintEnabled="false"
        app:errorTextAppearance="@style/ErrorText"
        android:layout_below="@id/end_time_layout"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:background="@drawable/normal_textfield_background"
            android:gravity="start|top"
            android:hint="@string/description_hint"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_layout"
        android:layout_marginTop="32dp"
        android:layout_marginStart="@dimen/screen_margin"
        android:layout_marginEnd="@dimen/screen_margin"
        android:text="@string/submit_button_text"
        android:textAppearance="@style/Action.ButtonText"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"/>

</RelativeLayout>
